--- a/JiaoBaoYun-hb/html/index.html
+++ b/JiaoBaoYun-hb/html/index.html
@@ -18,6 +18,10 @@
 
 		<header class="mui-bar mui-bar-nav common-background-bar">
 			<h1 id="title" class="mui-title">家校圈</h1>
+			<div id="random_icon" class=" mui-bar-nav mui-pull-right">
+				<a class="mui-icon mui-icon-arrowdown mui-pull-right "></a>
+				<a  class="mui-icon mui-icon-download mui-pull-right"></a>
+			</div>
 		</header>
 		<!--底部选项卡（.mui-bar-tab）-->
 		<nav  class="mui-bar mui-bar-tab common-background-bar">
