--- a/JiaoBaoYun-hb/html/knowledge/test.html
+++ b/JiaoBaoYun-hb/html/knowledge/test.html
@@ -6,16 +6,23 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<script src="../../js/libs/crypto-js/require.js"></script>
+		
 	</head>
 
 	<body>
-		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript">
-			mui.init()
-		</script>
-		<script src="../../libs/crypto-js-3.1.8/crypto-js.js"></script>
-		<script type="text/javascript">
-			var encrypted=Crypto.HmacSHA1()
+			require.config({
+				baseUrl:"",
+				waitSeconds:5,
+				paths:{
+					"crypto-js":"../../js/libs/crypto-js/crypto-js"
+				}
+			})
+			
+			require(["crypto-js"], function (CryptoJS) {
+				  console.log(CryptoJS.HmacSHA1("Message", "123"));
+			});
 		</script>
 	</body>
 
