--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -49,13 +49,21 @@
 				<!--评论数和排序选项-->
 				<div class="comments-info">
 					<p id="comments-no" class="comment-no mui-pull-left"></p>
-					<select id="order-selector" class="order-selector display-inlineBlock">
-						<option id="reverse-order" value="2">倒序排列</option>
-						<option value="1">顺序排列</option>
-					</select>
+					<a href="#popover" id="order-selector" class="order-selector display-inlineBlock">
+					倒序排列<span class="mui-icon mui-icon-arrowdown"></span></a>
 				</div>
 				<!--评论列表-->
 				<ul id="list-container" class="mui-table-view">
+				</ul>
+			</div>
+			<div id="popover" class="mui-popover">
+				<ul class="mui-table-view mui-table-view-radio">
+				    <li id="reverse-order" value="2" class="mui-table-view-cell mui-selected">
+				        <a class="mui-navigate-right">倒序排列</a>
+				    </li>
+				    <li id="sequence-order" value="1" class="mui-table-view-cell">
+				        <a class="mui-navigate-right">顺序排列</a>
+				    </li>
 				</ul>
 			</div>
 		</div>
