--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -14,8 +14,11 @@
 			.mui-table-view-cell {
 				padding: 0rem;
 			}
-			html,body,.mui-content{
+			html,body{
 				min-height: 100%;
+				background-color: white;
+			}
+			.mui-content{
 				background-color: white;
 			}
 		</style>
@@ -69,9 +72,8 @@
 				<!--<button id="quit-group3" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>-->
 				<!--</div>-->
 			</div>
-			<button id="quit-group" type="button" class="mui-btn mui-btn-danger group-button display-none ">退出</button>
 		</div>
-
+		<button id="quit-group" type="button" class="mui-btn mui-btn-danger group-button display-none ">退出</button>
 	</body>
 	<script src="../../js/mui.min.js"></script>
 	<script src="../../js/publicProtocol.js"></script>
