--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -8,7 +8,7 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="../../css/quan/custom-textarea.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/qiuzhi/qiuzhi-addAnswer.css" />
 	</head>
 
 	<body>
@@ -23,18 +23,21 @@
 				<p id="askTitle" style="margin-left: 10px;font-size: 14px;margin-top: 5px;word-wrap: break-word;"></p>
 				<div class="input-content">
 					<textarea id="answerContent" placeholder="添加回答,最多4000字"></textarea>
-					<div id="take_pic" class="take_pic file-extras">
-						<a class="mui-icon iconfont icon-xiangji1"></a>
-					</div>
-					<div id="take_camero" class="take_camero file-extras">
-						<a class="mui-icon iconfont icon-shipin"></a>
-					</div>
-					<div id="get_gallery" class="get_gallery file-extras">
-						<a class="mui-icon iconfont icon-tuku"></a>
-					</div>
-					<div class="mui-input-row mui-checkbox mui-left file-extras" style="float: right;width: 100px;margin-top: -42px;margin-left: -100px;">
-						<label>匿名</label>
-						<input id="checkbox" name="checkbox" value="" type="checkbox">
+					<div class="extras-info">
+						<div id="take_pic" class="take_pic file-extras">
+							<a class="mui-icon iconfont icon-xiangji1"></a>
+
+						</div>
+						<div id="take_camero" class="take_camero file-extras">
+							<a class="mui-icon iconfont icon-shipin"></a>
+						</div>
+						<div id="get_gallery" class="get_gallery file-extras">
+							<a class="mui-icon iconfont icon-tuku"></a>
+						</div>
+						<div class="mui-input-row mui-checkbox mui-left file-extras" style="float: right;width: 100px;margin-top: -40px;margin-left: -100px;">
+							<label>匿名</label>
+							<input id="checkbox" name="checkbox" value="" type="checkbox">
+						</div>
 					</div>
 				</div>
 
@@ -69,9 +72,10 @@
 					document.getElementById('title').innerText = '我要回答';
 					//匿名默认未选择
 					document.getElementById('checkbox').checked = false;
-					[].forEach.call(document.querySelectorAll('.file-extras'), function(item) {
-						item.style.display = 'inline-block';
-					})
+					document.querySelector(".extras-info").style.display="block";
+//					[].forEach.call(document.querySelectorAll('.file-extras'), function(item) {
+//						item.style.display = 'inline-block';
+//					})
 					document.getElementById('answerContent').placeholder = "添加回答,最多4000字";
 					jQuery('#answerContent').prop("maxLength", "4000"); //设置最长
 					var askTitle = document.getElementById("askTitle");
@@ -85,9 +89,10 @@
 					document.getElementById('title').innerText = '我要评论';
 					document.getElementById('answerContent').placeholder = "添加评论,最多300字";
 					jQuery('#answerContent').prop("maxLength", "300"); //设置最长
-					[].forEach.call(document.querySelectorAll('.file-extras'), function(item) {
-						item.style.display = 'none';
-					})
+					document.querySelector(".extras-info").style.display="none";
+//					[].forEach.call(document.querySelectorAll('.file-extras'), function(item) {
+//						item.style.display = 'none';
+//					})
 					answerInfo = e.detail.data;
 					document.getElementById('askTitle').innerText = "";
 				})
@@ -99,9 +104,10 @@
 					commentInfo = e.detail.data;
 					document.getElementById('askTitle').innerText = commentInfo.CommentContent;
 					document.getElementById('answerContent').placeholder = "添加评论回复,最多300字";
-					[].forEach.call(document.querySelectorAll('.file-extras'), function(item) {
-						item.style.display = 'none';
-					})
+					document.querySelector(".extras-info").style.display="none";
+//					[].forEach.call(document.querySelectorAll('.file-extras'), function(item) {
+//						item.style.display = 'none';
+//					})
 				})
 				setListener();
 			});
