--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -324,39 +324,16 @@
 										//										setTimeout(function(){mui.back();},2000);
 										mui.back();
 									} else if(tempFlag == 3) { //在设置里，退出时设置密码
-										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
-										tempInfo.isLogin = 1;
-										//修改自动登录值
-										var model_area = {
-											procode: '00', //省份code，自己添加的参数
-											proname: '全国', //省份名称，自己添加的参数
-											acode: '000000', //节点代码,通用6位,前两位为省份编码,中间两位为城市编码,后两位为区县编码--城市代码
-											aname: '全国', //节点名称--城市名称
-											atype: '' //节点类型,0省1城市2区县
-										}
-										var personal1 = {
-											utid: '0', //用户表ID
-											uid: '00000000000', //电话号码
-											uname: '游客', //姓名,账号,只能修改一次,且只能字母开头,字母与数字,定了就不能修改
-											uimg: '../../image/utils/default_personalimage.png', //用户头像地址
-											unick: '游客', //用户昵称
-											usex: '', //用户性别
-											utxt: '', //用户签名
-											uarea: model_area, //用户区域,省代码 市代码|省名称 市名称
-											token: '', //用户令牌
-											ispw: '', //0无密码，1有密码
-											isLogin: '' //是否登录，0没有登录过，1有登录过
-										}
-										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, personal1);
-										//退出登录
-										events.logOff();
-										events.infoChanged();
-										//跳转到登录界面
-										//										events.openNewWindowWithData('../../html/register/login.html', '');
-										mui.fire(plus.webview.getLaunchWebview(), 'quit');
-										closeRegister(1);
-										mui.back();
-//										plus.webview.getLaunchWebview().show('slide-in-right', 250);
+										events.defaultLogin(data {
+											if(data.value) {
+												//退出登录
+												events.logOff();
+												events.infoChanged();
+												mui.fire(plus.webview.getLaunchWebview(), 'quit');
+												closeRegister(1);
+												mui.back();
+											}
+										});
 									}
 								}
 							});
@@ -376,22 +353,22 @@
 					mui.fire(plus.webview.getLaunchWebview(), 'login');
 					closeRegister();
 					mui.back();
-//					plus.webview.getLaunchWebview().show('slide-in-right', 250);
+					//					plus.webview.getLaunchWebview().show('slide-in-right', 250);
 				});
 			});
 			/**
 			 * 设置 退出登录类型
 			 * @param {Object} quitType 0 为设置 1为退出时设置
 			 */
-			var closeRegister=function(quitType){
+			var closeRegister = function(quitType) {
 				events.hidePagesExIndex();
-				if(quitType){
+				if(quitType) {
 					plus.webview.getWebviewById("setting.html").close();
 					return;
 				}
 				plus.webview.getWebviewById("register_phoneNumber.html").close();
 				plus.webview.getWebviewById("yanZhengMa.html").close();
-				plus.webview.getWebviewById("login.html").close();	
+				plus.webview.getWebviewById("login.html").close();
 			}
 			//将界面的数据显示清除
 			var clearData = function() {
