--- a/JiaoBaoYun-hb/html/micro-course/course-all.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-all.html
@@ -6,6 +6,8 @@
 		<title>全部课程</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<link href="../../css/utils/fresh.css" rel="stylesheet" />
 		<link href="../../css/micro-course/course-list.css" rel="stylesheet" />
 	</head>
 
