--- a/JiaoBaoYun-hb/html/show/show-all.html
+++ b/JiaoBaoYun-hb/html/show/show-all.html
@@ -34,13 +34,15 @@
 			var oldPageIndex;
 			var freshFlag = 0;
 			var showCity = {
+				pageFlag : 1,//全部
 				acode: 1,
-				aname: '关注',
+				aname: '全部',
 				aflag: 1 ,//0为根据省市编码获取数据，1为获取关注的人的列表
 				pageIndex:1
 			}
+			var showArray = [];
 			show_list.initFresh();
-			var totalPage=100;
+			var totalPage;
 			mui.init();
 			mui.plusReady(function() {
 				show_list.getShowList(showCity,document.getElementById("list-container"),show_list.setShowList);
