--- a/JiaoBaoYun-hb/html/quan/space-detail.html
+++ b/JiaoBaoYun-hb/html/quan/space-detail.html
@@ -51,7 +51,7 @@
 	<header class="mui-bar mui-bar-nav">
 		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		<h1 id="spaceDetail" class="mui-title">空间详情</h1>
-		<a id="delete" class="mui-icon iconfont icon-moreandroid mui-pull-right mui-plus-visible mui-hidden"></a>
+		<a id="delete" class="mui-icon iconfont icon-moreandroid mui-pull-right"></a>
 
 	</header>
 
@@ -99,9 +99,10 @@
 			SCREEN_WIDTH = plus.screen.resolutionWidth;
 			preModel = plus.webview.currentWebview().data
 
-			publisherId = preModel.publisherId
-			if(publisherId == personalUTID) {
-				document.getElementById("delete").className = 'mui-icon iconfont icon-moreandroid mui-pull-right mui-plus-visible';
+			publisherId = preModel.PublisherId
+			console.log('personalUTID='+personalUTID+'-----'+'publisherId='+JSON.stringify(preModel))
+			if(personalUTID==0||personalUTID!=publisherId){
+				document.getElementById("delete").className = 'mui-hidden';
 
 			}
 			events.addTap('delete', function() {
